--- a/src/html/index.css
+++ b/src/html/index.css
@@ -20,7 +20,7 @@ h2 {
 
 .icon {
   padding: 10px;
-  background: #333333;
+  background: #ff5050;
   color: white;
   min-width: 50px;
   text-align: center;
@@ -32,30 +32,30 @@ h2 {
   padding: 10px;
   outline: none;
   font-family: "Poppins";
-  border: 2px solid #333333;
+  border: 2px solid #ff5050;
 }
 
 .input-field:focus {
-  box-shadow: 0 0 10px #333333;
-  border: 2px solid #333333;
+  box-shadow: 0 0 10px #ff5050;
+  border: 2px solid #ff5050;
 }
 
 .input-wrapper textarea {
   padding: 1rem;
-  border: 2px solid #333333;
+  border: 2px solid #ff5050;
 }
 
 .input-wrapper textarea:focus {
   outline: none;
   box-shadow: 0 0 10px #333333;
-  border: 2px solid #333333;
+  border: 2px solid #ff5050;
 }
 
 
 .send-btn {
   background-color: #333333;
   color: white;
-  padding: 15px 20px;
+  padding: 35px 45px;
   border: none;
   cursor: pointer;
   width: 100%;
