--- a/src/html/success.css
+++ b/src/html/success.css
@@ -21,3 +21,10 @@ a:hover {
 body .icon {
   font-size: 3rem;
 }
+
+#info
+{text-align: center; 
+ font-size: large; 
+ font-family: "font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif;"
+}
+
