--- a/src/html/index.css
+++ b/src/html/index.css
@@ -14,13 +14,14 @@ h2 {
   display: -ms-flexbox; 
   display: flex;
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
   font-family: "Poppins";
+  grid-column: 1 / 3;  
 }
 
 .icon {
   padding: 10px;
-  background: #ff5050;
+  background: #333333;
   color: white;
   min-width: 50px;
   text-align: center;
@@ -32,30 +33,30 @@ h2 {
   padding: 10px;
   outline: none;
   font-family: "Poppins";
-  border: 2px solid #ff5050;
+  border: 2px solid #333333;
 }
 
 .input-field:focus {
-  box-shadow: 0 0 10px #ff5050;
-  border: 2px solid #ff5050;
+  box-shadow: 0 0 10px #333333;
+  border: 2px solid #333333;
 }
 
 .input-wrapper textarea {
   padding: 1rem;
-  border: 2px solid #ff5050;
+  border: 2px solid #333333;
 }
 
 .input-wrapper textarea:focus {
   outline: none;
   box-shadow: 0 0 10px #333333;
-  border: 2px solid #ff5050;
+  border: 2px solid #333333;
 }
 
 
 .send-btn {
   background-color: #333333;
   color: white;
-  padding: 35px 45px;
+  padding: 15px 20px;
   border: none;
   cursor: pointer;
   width: 100%;
@@ -65,4 +66,91 @@ h2 {
 
 .send-btn:hover {
   opacity: 1;
+}
+
+.form {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+form label {
+  display: block;
+}
+
+.display-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.contain {
+  max-width: 1366px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
+}
+@media (min-width: 600px) {
+  .contain {
+    padding: 0;
+  }
+}
+
+h3,
+ul {
+  margin: 0;
+}
+
+h3 {
+  margin-bottom: 1rem;
+}
+
+input:focus,
+textarea:focus {
+  outline: 3px solid gold;
+}
+
+input,
+textarea,
+button {
+  width: 100%;
+  border: 1px solid #000;
+}
+
+.wrapper {
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+.wrapper > * {
+  padding: 1em;
+}
+@media (min-width: 700px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+  .wrapper > * {
+    padding: 2em 2em;
+  }
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 1rem;
+}
+
+.contain {
+  max-width: 1366px;
+  max-height: 768px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
+}
+
+.aboutMe {
+  background: #4b5195;
+  color: #fff;
+  max-height: 768px;
 }
